GPS Time stamping to ISO 8601